# lynguine

./: .buildinfo  .gitignore  README.md  READTHEDOCS_SETUP.md  code-tests.py  compute_framework.html  genindex.html  improvement_plan.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  vibesafe-tenets.md
.cursor/rules/: backlog.mdc
.doctrees/: compute_framework.doctree  environment.pickle  improvement_plan.doctree  index.doctree
.doctrees/contributing/: guide.doctree  setup.doctree  style_guide.doctree  testing.doctree
.doctrees/getting_started/: column_management.doctree  examples.doctree  installation.doctree  quickstart.doctree
.doctrees/modules/: lynguine.access.doctree  lynguine.assess.doctree  lynguine.config.doctree  lynguine.util.doctree  ndlpy.access.doctree  ndlpy.context.doctree  ndlpy.data.doctree  ndlpy.dfutil.doctree  ndlpy.settings.doctree  ndlpy.util.doctree
.doctrees/security/: IMPLEMENTATION_SUMMARY.doctree  SECURE_CREDENTIALS.doctree  USER_GUIDE.doctree  api_reference.doctree  index.doctree
.doctrees/server_mode/: api.doctree  examples.doctree  index.doctree  migration.doctree  quickstart.doctree  troubleshooting.doctree
.github/workflows/: docs.yml  documentation.yml  python-tests.yml  test-code.yml
_modules/: index.html
_modules/lynguine/: client.html  log.html  server.html
_sources/: compute_framework.md.txt  improvement_plan.md.txt  index.rst.txt
_sources/contributing/: guide.rst.txt  setup.rst.txt  style_guide.rst.txt
_sources/getting_started/: installation.rst.txt
_sources/modules/: lynguine.util.rst.txt
_sources/security/: SECURE_CREDENTIALS.md.txt  USER_GUIDE.md.txt
_sources/server_mode/: api.rst.txt  troubleshooting.rst.txt
backlog/: index.md  task_template.md
backlog/bugs/: 2025-05-28_index-missing-from-mapping.md  2025-10-02_column-mapping-conflict.md  2025-10-09_mapping-conflict-with-identity-mappings.md  2025-12-02_read-data-list-type-passes-dict.md  2025-12-02_read-files-default-reader-wrong-arg.md  2025-12-21_append-mode-blocked-by-refresh-logic.md  2025-12-21_fix-network-error-test-download.md  2025-12-21_fix-read-files-sourceroot-conflict.md  2025-12-21_fix-read-files-txt-type.md  2025-12-22_fix-dataframe-fragmentation-warning.md  2025-12-22_missing-get-compute-index-method.md
cip/: README.md  cip0001.md  cip0002.md  cip0003.md  cip0004.md  cip0005.md  cip0006.md  cip0007.md  cip0008.md
contributing/: guide.html  setup.html  style_guide.html  testing.html
docs/: conf.py  improvement_plan.md  index.rst
getting_started/: column_management.html  examples.html  installation.html  quickstart.html
linguine/: ndlconvert.py
lynguine/: __init__.py  client.py  compute.py  log.py  server.py  server_interface_handlers.py  server_session_handlers.py  session_manager.py
modules/: lynguine.access.html  lynguine.assess.html  lynguine.config.html  lynguine.util.html  ndlpy.access.html  ndlpy.context.html  ndlpy.data.html  ndlpy.dfutil.html  ndlpy.settings.html  ndlpy.util.html
ndlpy/: __init__.py  access.py  config.py  context.py  data.py  defaults.yml  dfutil.py  fake.py  log.py  ndlcgi.py  ndlfile.py  ndlhtml.py  ndlmarkdown.py  new_config.py  settings.py  talk.py  tex.py  util.py  yaml.py
requirements/: req0001_code-quality-maintainability.md  req0002_predictable-architecture.md  req0003_ai-text-processing.md  req0004_secure-credentials.md  req0005_config-flexibility.md  req0006_clear-architectural-boundaries.md  req0007_fast-repeated-access.md
scripts/: finalize_readthedocs.sh  validate_vibesafe_structure.py
security/: IMPLEMENTATION_SUMMARY.html  SECURE_CREDENTIALS.html  USER_GUIDE.html  api_reference.html  implementation_summary.html  index.html  user_guide.html
server_mode/: api.html  examples.html  index.html  migration.html  quickstart.html  troubleshooting.html
(+193 files in other folders)
