[tool.poetry]
name = "ndlpy"
version = "0.1.0"
description = "Package of utility files for python scripts."
authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lawrennd/ndlpy"
include = ["ndlpy/defaults.yml"]
classifiers = [
    "License :: OSI Approved :: MIT License",	
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = ">=3.9"
python-frontmatter = "*"
bibtexparser = "*"
pyyaml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ndlconvert = "ndlpy.ndlconvert:main"

