[tool.poetry]
name = "ndlpy"
version = "0.2.1"
description = "Package of utility files for python scripts."
authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lawrennd/ndlpy"
include = ["ndlpy/defaults.yml"]
classifiers = [
    "License :: OSI Approved :: MIT License",	
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-frontmatter = "*"
bibtexparser = "*"
pyyaml = "*"
openpyxl = "*"
XlsxWriter = "*"
pandas = "*"
deepdiff = "^5.5.0"
pypandoc = "*"
gitpython = "*"
anyascii = "*"
python-liquid = "*"
pylatexenc = "*"
markdownify = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
gspread-pandas = "*"
mimesis = ">11"
pyminizip = "*"
wget = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.3.1"  


[tool.poetry.scripts]
ndlconvert = "ndlpy.ndlconvert:main"

# pyproject.toml
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

